--- a/src/components/update-info/style/update-info.css
+++ b/src/components/update-info/style/update-info.css
@@ -8,6 +8,7 @@
   background: #FFFFFF;
   border-radius: 20px;
   padding: 32px;
+  z-index: 34;
 }
 @media screen and (max-width: 1100px) {
   .update-info .modal-content {
@@ -17,7 +18,7 @@
 }
 @media screen and (max-width: 581px) {
   .update-info .modal-content {
-    width: 80%;
+    width: 90%;
   }
 }
 .update-info .modal-content::-webkit-scrollbar {
