--- a/src/components/update-info/style/update-info.scss
+++ b/src/components/update-info/style/update-info.scss
@@ -8,12 +8,13 @@
   background: #FFFFFF;
   border-radius: 20px;
   padding: 32px;
+  z-index: 34;
   @media screen and (max-width: 1100px){
     width: 100%;
     left: 5%;
   }
   @media screen and (max-width: 581px){
-    width: 80%;
+    width: 90%;
   }
   &::-webkit-scrollbar {
     width: 5px;
